--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+config/deploy/production.rb
+config/deploy.rb
 .env
-
+log/*
 src/apis/youtube.js
